fix: resolve broken layout on mobile

--- a/src/sass/0.base.scss
+++ b/src/sass/0.base.scss
@@ -87,8 +87,14 @@ a {
   flex-direction: column;
   align-content: center;
   justify-items: center;
-  justify-content: center;
   height: 100vh;
+}
+
+@media (min-width: 800px) {
+  .center-body {
+    justify-content: center;
+
+  }
 }
 
 /* End - Must-have Layout */
